--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -86,7 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = neural_network.MLPRegressor((10,5,10),'tanh',solver='adam')\n",
+    "clf = neural_network.MLPRegressor((10,5,10),'tanh',solver='adam',max_iter=1000)\n",
+    "#clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
+    "\n",
     "clf.fit(prescale_X,prescale_y)"
    ]
   },
@@ -291,7 +293,8 @@
    "source": [
     "Xn = np.array(player_vectors)\n",
     "scalerX2 = preprocessing.StandardScaler(with_mean=True,with_std=True)\n",
-    "ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX2.fit_transform(Xn))))"
+    "ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX2.fit_transform(Xn))))\n",
+    "#ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX.transform(Xn))))"
    ]
   },
   {
@@ -366,13 +369,13 @@
     "    base['version'] = 32\n",
     "\n",
     "    return players,base\n",
-    "players,base = load_roster('base_roster.json')\n",
+    "players,base = load_roster('normed.json')\n",
     "abbrev_to_tid = {_['abbrev']:_['tid']for _ in base['teams']}\n",
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
     "abbrev_to_tid['BRK'] = abbrev_to_tid['BKN']\n",
     "players_discard = [_ for _ in players if  _['tid'] > -3 ]\n",
-    "players = [_ for _ in players if _['tid'] in set([-2,-4,-5])]\n",
+    "players = [_ for _ in players if _['tid'] in set([-1,-2,-4,-5])]\n",
     "y_keys = [_.lower() for _ in y.columns]\n",
     "\n",
     "y_map = { 'hgt': 'hgt',\n",
@@ -424,16 +427,14 @@
     "    new_player['ratings'] = [{k: int(np.clip(ratings[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
     "    \n",
     "    players.append(new_player)\n",
-    "    if name == \"Trevon Duval\":\n",
+    "    if name in ['LeBron James', \"Trevon Duval\"]:\n",
     "        pp.pprint(new_player)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if False:\n",
