--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -36,7 +36,7 @@
     "X = df.iloc[:,11:-17]\n",
     "y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
     "X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
-    "\n",
+    "X['MP'] = df.MP\n",
     "df.columns,X.shape"
    ]
   },
@@ -51,7 +51,7 @@
     "             'PF',\"PTS\",'OWS','DWS']:\n",
     "    X[name + 'p36'] = 36* df[name]/np.maximum(1,df.MP)\n",
     "\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or 'r' in _ or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or 'PER'== _]]\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or 'r' in _ or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['PER','MP']]]\n",
     "X.columns"
    ]
   },
@@ -235,6 +235,7 @@
     "    #for stat in X.columns:\n",
     "    d=    {'FG%':player_stats[name]['totals'][0][6]*100,\n",
     "        '3P%':player_stats[name]['totals'][0][9]*100,\n",
+    "        'MP':player_stats[name]['per_game'][0][3],\n",
     "        'FT%':player_stats[name]['totals'][0][16]*100,\n",
     "        'AtRimFGP':player_stats[name]['shooting'][0][11]*100,\n",
     "        'LowPostFGP':player_stats[name]['shooting'][0][12]*100,\n",
@@ -271,7 +272,8 @@
     "        'DWSp36':36*player_stats[name]['advanced'][0][17]/player_stats[name]['advanced'][0][2]}\n",
     "    player_vectors.append([d[stat] for stat in X.columns])\n",
     "    if name == 'Ben Simmons':\n",
-    "        print(player_vectors[-1])\n"
+    "        print(player_vectors[-1])\n",
+    "X.columns"
    ]
   },
   {
