--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -404,6 +404,10 @@
    "outputs": [],
    "source": [
     "import pprint\n",
+    "import copy\n",
+    "\n",
+    "pset2 = copy.deepcopy(players)\n",
+    "pset3 = copy.deepcopy(players)\n",
     "pp = pprint.PrettyPrinter()\n",
     "for i,name in enumerate(player_names):\n",
     "    name = player_names[i]\n",
@@ -468,24 +472,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Xn[:,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players_discard[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "base['players'] = players\n",
     "with open('auto_roster.json','wt') as fp:\n",
     "    json.dump(base,fp, indent=4, sort_keys=True)"
@@ -496,7 +482,244 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "bpms = []\n",
+    "for name in player_stats:\n",
+    "    if 'advanced' in player_stats[name]:\n",
+    "        bpm = 0#player_stats[name]['advanced'][0][23]\n",
+    "        vorp = player_stats[name]['advanced'][0][24]\n",
+    "        bpms.append((bpm+vorp,name))\n",
+    "i=0\n",
+    "m = len(bpms)\n",
+    "for v,k in sorted(bpms):\n",
+    "    player_stats[k]['bpm'] = ((i)/m)*0.8+0.2\n",
+    "    i+=1\n",
+    "bpms = np.array([_[0] for _ in bpms])\n",
+    "bm,bs = bpms.mean(),bpms.std()\n",
+    "bm,bs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_stats[\"LeBron James\"]['bpm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lkc = [_.lower() for _ in df._get_numeric_data().columns]\n",
+    "dfm = {k:v for k,v in zip(lkc,df.mean(0))}\n",
+    "dfs = {k:v for k,v in zip(lkc,df.std(0))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_vectors2 = []\n",
+    "player_names2 = []\n",
+    "ok = sorted(y_map.keys())\n",
+    "bpmv = []\n",
+    "for name in player_stats:\n",
+    "    if not 'totals' in player_stats[name]:\n",
+    "        continue\n",
+    "    if 'roster' in  player_stats[name]:\n",
+    "        ht = [int(_) for _ in player_stats[name]['roster'][0][1].split('-')]\n",
+    "        h2 = ht[0]*12 + ht[1]\n",
+    "        w = int(player_stats[name]['roster'][0][2])\n",
+    "    else:\n",
+    "        continue\n",
+    "    player_names2.append(name)\n",
+    "    BPM = player_stats[name]['bpm']\n",
+    "    bpmv.append(BPM)\n",
+    "    d=    {\n",
+    "        'hgt':h2,\n",
+    "        'stre':w,\n",
+    "        'spd':player_stats[name]['advanced'][0][13],\n",
+    "        'jmp':player_stats[name]['per_minute'][0][23],\n",
+    "        'endu':player_stats[name]['advanced'][0][14],\n",
+    "        'ins':player_stats[name]['per_minute'][0][13],\n",
+    "        'dnk':player_stats[name]['shooting'][0][11]*100,\n",
+    "        'ft':player_stats[name]['totals'][0][16], #ft% times made\n",
+    "        'fg':player_stats[name]['advanced'][0][4], #ts\n",
+    "        'tp':player_stats[name]['totals'][0][9], #3% times made\n",
+    "        'diq':player_stats[name]['advanced'][0][22],\n",
+    "        'oiq':player_stats[name]['advanced'][0][21],\n",
+    "        'drb':player_stats[name]['advanced'][0][11]*player_stats[name]['per_minute'][0][22],\n",
+    "        'pss':player_stats[name]['advanced'][0][10]*player_stats[name]['per_minute'][0][19],\n",
+    "        'reb':player_stats[name]['advanced'][0][9]*player_stats[name]['per_minute'][0][18]}\n",
+    "    player_vectors2.append([d[k]*BPM for k in sorted(d)])\n",
+    "    if name == 'LeBron James':\n",
+    "        print(player_vectors2[-1])\n",
+    "#print(player_vectors2[player_names2.index('Ben Simmons')])\n",
+    "\n",
+    "#player_vectors3 = [k:[v[_] for _ in sorted(v)] for k,v in player_vectors2.items() }\n",
+    "Xman = np.array(player_vectors2)#*np.array(bpmv)[:,np.newaxis]#['Ben Simmons']\n",
+    "Xmn = (Xman -Xman.mean(0))/Xman.std(0)\n",
+    "\n",
+    "player_man = {}\n",
+    "\n",
+    "for n,r in zip(player_names2,Xmn):\n",
+    "    #print(n,r)\n",
+    "    player_man[n] = {k:int(np.clip(r[i]*dfs[y_map[k]]+dfm[y_map[k]],0,100)) for i,k in enumerate(ok)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"LeBron James\"\n",
+    "player_stats[name]['bpm']\n",
+    "_ = plt.hist(Xmn[:,3],8)\n",
+    "Xmn[player_names2.index('LeBron James'),9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xman.mean(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_man[name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,name in enumerate(player_names):\n",
+    "    name = player_names[i]\n",
+    "    if name not in player_man:\n",
+    "        continue\n",
+    "    sname = name.split(' ')\n",
+    "    \n",
+    "    new_player = {}\n",
+    "    new_player['firstName'] = sname[0]\n",
+    "    new_player['lastName'] = ' '.join(sname[1:])\n",
+    "\n",
+    "    new_player['tid'] = abbrev_to_tid[rosters[name]] if name in rosters else -1\n",
+    "    if name in rosters:\n",
+    "        new_player['pos'] = player_stats[name]['roster'][0][0]\n",
+    "        new_player['weight'] = int(player_stats[name]['roster'][0][2])\n",
+    "        ht = [int(_) for _ in player_stats[name]['roster'][0][1].split('-')]\n",
+    "        new_player['height'] = ht[0]*12 + ht[1]\n",
+    "        new_player['born'] = {'year':int(player_stats[name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
+    "        if 'contracts' in player_stats[name]:\n",
+    "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
+    "            if len(ctrct) > 0:\n",
+    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2019+len(ctrct)}\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    new_player['ratings'] = [player_man[name]]\n",
+    "    \n",
+    "    pset2.append(new_player)\n",
+    "    if name in ['LeBron James', \"Trevon Duval\"]:\n",
+    "        pp.pprint(new_player)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base['players'] = pset2\n",
+    "with open('auto_roster_nomodel.json','wt') as fp:\n",
+    "    json.dump(base,fp, indent=4, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " 2*player_stats['LeBron James']['bpm']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pset4 = copy.deepcopy(pset3)\n",
+    "for i,name in enumerate(player_names):\n",
+    "    name = player_names[i]\n",
+    "    sname = name.split(' ')\n",
+    "    new_player = {}\n",
+    "    new_player['firstName'] = sname[0]\n",
+    "    new_player['lastName'] = ' '.join(sname[1:])\n",
+    "\n",
+    "    new_player['tid'] = abbrev_to_tid[rosters[name]] if name in rosters else -1\n",
+    "    if name in rosters:\n",
+    "\n",
+    "        new_player['pos'] = player_stats[name]['roster'][0][0]\n",
+    "        new_player['weight'] = int(player_stats[name]['roster'][0][2])\n",
+    "        ht = [int(_) for _ in player_stats[name]['roster'][0][1].split('-')]\n",
+    "        new_player['height'] = ht[0]*12 + ht[1]\n",
+    "        new_player['born'] = {'year':int(player_stats[name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
+    "        if 'contracts' in player_stats[name]:\n",
+    "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
+    "            if len(ctrct) > 0:\n",
+    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2019+len(ctrct)}\n",
+    "    else:\n",
+    "        continue\n",
+    "    BPM = sigmoid((player_stats[name]['advanced'][0][24]-bm)/(40*bs))*2\n",
+    "\n",
+    "    new_player['ratings'] = [{k: int(np.clip(BPM*ratings[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
+    "    \n",
+    "    pset4.append(new_player)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base['players'] = pset4\n",
+    "with open('auto_roster_model_vorp.json','wt') as fp:\n",
+    "    json.dump(base,fp, indent=4, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigmoid((player_stats['LeBron James']['advanced'][0][24]-bm)/(30*bs))*2,sigmoid((player_stats['James Harden']['advanced'][0][24]-bm)/(30*bs))*2\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
