fix contract length

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = neural_network.MLPRegressor((10,5,10),'tanh',solver='adam',max_iter=1000)\n",
+    "clf = neural_network.MLPRegressor((12,6,12),'tanh',solver='adam',max_iter=2000,tol=1e-9)\n",
     "#clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
     "\n",
     "clf.fit(prescale_X,prescale_y)"
@@ -426,7 +426,7 @@
     "        if 'contracts' in player_stats[name]:\n",
     "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
-    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2019+len(ctrct)}\n",
+    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2018+len(ctrct)}\n",
     "    else:\n",
     "        continue\n",
     "\n",
@@ -634,7 +634,7 @@
     "        if 'contracts' in player_stats[name]:\n",
     "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
-    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2019+len(ctrct)}\n",
+    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2018+len(ctrct)}\n",
     "    else:\n",
     "        continue\n",
     "\n",
@@ -690,7 +690,7 @@
     "        if 'contracts' in player_stats[name]:\n",
     "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
-    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2019+len(ctrct)}\n",
+    "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2018+len(ctrct)}\n",
     "    else:\n",
     "        continue\n",
     "    BPM = sigmoid((player_stats[name]['advanced'][0][24]-bm)/(40*bs))*2\n",
@@ -720,6 +720,20 @@
     "sigmoid((player_stats['LeBron James']['advanced'][0][24]-bm)/(30*bs))*2,sigmoid((player_stats['James Harden']['advanced'][0][24]-bm)/(30*bs))*2\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
