--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -73,8 +73,8 @@
    "outputs": [],
    "source": [
     "fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=True)\n",
-    "scalerX = preprocessing.StandardScaler(with_mean=True,with_std=True)\n",
-    "scalery = preprocessing.StandardScaler(with_mean=True,with_std=True)\n",
+    "scalerX = preprocessing.RobustScaler()\n",
+    "scalery = preprocessing.RobustScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
     "prescale_y = scalery.fit_transform(y)\n",
     "prescale_X = fexp.fit_transform(prescale_X)"
@@ -86,10 +86,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = neural_network.MLPRegressor((12,4,12),'tanh',solver='adam',max_iter=2000,tol=1e-9)\n",
-    "#clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
-    "\n",
-    "clf.fit(prescale_X,prescale_y)"
+    "trials = 1\n",
+    "ts = []\n",
+    "for i in range(trials):\n",
+    "    clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
+    "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
+    "    clf.fit(prescale_X,prescale_y)\n",
+    "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
+    "    err = np.linalg.norm(yt-y)\n",
+    "    ts.append((err,clf))"
    ]
   },
   {
@@ -98,8 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
-    "print(np.linalg.norm(yt-y))"
+    "ts = sorted(ts)\n",
+    "print(ts[0][0])\n",
+    "clf = ts[0][1]"
    ]
   },
   {
@@ -294,7 +300,7 @@
    "outputs": [],
    "source": [
     "Xn = np.array(player_vectors)\n",
-    "scalerX2 = preprocessing.StandardScaler(with_mean=True,with_std=True)\n",
+    "scalerX2 = preprocessing.RobustScaler()\n",
     "ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX2.fit_transform(Xn))))\n",
     "#ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX.transform(Xn))))"
    ]
@@ -302,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "player_vectors[player_names.index('Joel Embiid')][13],X.columns[13]"
@@ -720,6 +728,13 @@
     "sigmoid((player_stats['LeBron James']['advanced'][0][24]-bm)/(30*bs))*2,sigmoid((player_stats['James Harden']['advanced'][0][24]-bm)/(30*bs))*2\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
