--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=True)\n",
     "scalerX = preprocessing.RobustScaler()\n",
-    "scalery = preprocessing.RobustScaler()\n",
+    "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
     "prescale_y = scalery.fit_transform(y)\n",
     "prescale_X = fexp.fit_transform(prescale_X)"
@@ -133,7 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables =np.load('tables_2019.pkl')\n",
+    "tyear = 2019\n",
+    "tables =np.load('tables_{}.pkl'.format(tyear))\n",
     "teams = tables.keys()"
    ]
   },
@@ -150,7 +151,7 @@
     "    for table_name in team_tables:\n",
     "        if table_name in ['draft-rights','team_and_opponent']:\n",
     "            continue\n",
-    "        table = team_tables[table_name]\n",
+    "        table = team_tables[table_name].fillna(0)\n",
     "        #print(table_name)\n",
     "        #print(table.index)\n",
     "        for row in table.itertuples():\n",
@@ -299,21 +300,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xn = np.array(player_vectors)\n",
-    "scalerX2 = preprocessing.RobustScaler()\n",
-    "ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX2.fit_transform(Xn))))\n",
+    "Xn = np.nan_to_num(np.array(player_vectors))\n",
+    "scalerX2 = preprocessing.StandardScaler()\n",
+    "Xn_s =scalerX2.fit_transform(np.nan_to_num(Xn))\n",
+    "Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
+    "predict = clf.predict(Xn_fs)\n",
+    "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
     "#ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX.transform(Xn))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "player_vectors[player_names.index('Joel Embiid')][13],X.columns[13]"
    ]
   },
   {
@@ -322,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.mean(0)"
+    "#player_vectors[player_names.index('Joel Embiid')][13],X.columns[13]"
    ]
   },
   {
@@ -384,6 +377,12 @@
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
     "abbrev_to_tid['BRK'] = abbrev_to_tid['BKN']\n",
+    "abbrev_to_tid['NOH'] = abbrev_to_tid['NOP']\n",
+    "abbrev_to_tid['NJN'] = abbrev_to_tid['BKN']\n",
+    "abbrev_to_tid['SEA'] = abbrev_to_tid['OKC']\n",
+    "\n",
+    "base['startingSeason'] = tyear\n",
+    "\n",
     "players_discard = [_ for _ in players if  _['tid'] > -3 ]\n",
     "players = [_ for _ in players if _['tid'] in set([-1,-2,-4,-5])]\n",
     "y_keys = [_.lower() for _ in y.columns]\n",
@@ -577,13 +576,19 @@
     "\n",
     "#player_vectors3 = [k:[v[_] for _ in sorted(v)] for k,v in player_vectors2.items() }\n",
     "Xman = np.array(player_vectors2)#*np.array(bpmv)[:,np.newaxis]#['Ben Simmons']\n",
+    "Xman = np.nan_to_num(Xman)\n",
     "Xmn = (Xman -Xman.mean(0))/Xman.std(0)\n",
     "\n",
     "player_man = {}\n",
     "\n",
     "for n,r in zip(player_names2,Xmn):\n",
     "    #print(n,r)\n",
-    "    player_man[n] = {k:int(np.clip(r[i]*dfs[y_map[k]]+dfm[y_map[k]],0,100)) for i,k in enumerate(ok)}"
+    "    try:\n",
+    "        player_man[n] = {k:int(np.clip(r[i]*dfs[y_map[k]]+dfm[y_map[k]],0,100)) for i,k in enumerate(ok)}\n",
+    "    except:\n",
+    "        print(n)\n",
+    "        print(r)\n",
+    "        raise"
    ]
   },
   {
@@ -728,6 +733,20 @@
     "sigmoid((player_stats['LeBron James']['advanced'][0][24]-bm)/(30*bs))*2,sigmoid((player_stats['James Harden']['advanced'][0][24]-bm)/(30*bs))*2\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
