add advanced stats

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -37,6 +37,7 @@
     "y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
     "X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
     "X['MP'] = df.MP\n",
+    "\n",
     "df.columns,X.shape"
    ]
   },
@@ -50,9 +51,26 @@
     "             'ORB','DRB','TRB','AST','TOV','STL',\"Blk\",\\\n",
     "             'PF',\"PTS\",'OWS','DWS']:\n",
     "    X[name + 'p36'] = 36* df[name]/np.maximum(1,df.MP)\n",
+    "    X[name + 'p100'] = X[name + 'p36']*4/3\n",
     "\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or 'r' in _ or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['PER','MP']]]\n",
+    "X['3PtP'] = (2/(1+np.exp(-X['3PAp100']))-1)*X['3P%']/100\n",
+    "X['Creation'] = X['ASTp100']*0.1843+(X['PTSp100']+X['TOVp100'])*0.0969-2.3021*X['3PtP']+0.0582*(X['ASTp100']*(X['PTSp100']+X['TOVp100'])*X['3PtP'] )-1.1942\n",
+    "X['Load'] = (X['ASTp100']-(0.38*X['Creation'])*0.75)+X['FGAp100']+X['FTAp100']*0.44+X['Creation']+X['TOVp100']\n",
+    "X['cTOV'] = X['TOVp100']/X['Load']\n",
+    "\n",
+    "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
+    "\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['cTOV','3PtP','Load','Creation','PER','MP','PassP']]]\n",
     "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ =  plt.hist(X['cTOV'],150)"
    ]
   },
   {
@@ -72,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=True)\n",
+    "fexp = preprocessing.PolynomialFeatures(degree=2,interaction_only=False)\n",
     "scalerX = preprocessing.RobustScaler()\n",
     "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
@@ -89,8 +107,8 @@
     "trials = 1\n",
     "ts = []\n",
     "for i in range(trials):\n",
-    "    clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
-    "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
+    "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
+    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs')\n",
     "    clf.fit(prescale_X,prescale_y)\n",
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
@@ -117,7 +135,7 @@
     "col_names = X.columns\n",
     "col_names = fexp.get_feature_names(X.columns)\n",
     "\n",
-    "for i,c in enumerate(df.columns[-15:]):\n",
+    "for i,c in enumerate(y.columns):\n",
     "    coeffs = clf.coefs_[-1][:,i]\n",
     "    v = np.argsort(coeffs)[::-1]\n",
     "    print(c)\n",
@@ -231,6 +249,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "player_stats['Ben Simmons'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "player_vectors = []\n",
     "player_names = []\n",
     "for name in player_stats:\n",
@@ -274,13 +301,44 @@
     "        'Blkp36':player_stats[name]['per_minute'][0][21],\n",
     "        'PFp36':player_stats[name]['per_minute'][0][23],\n",
     "        'PTSp36':player_stats[name]['per_minute'][0][24],\n",
+    "        'FGp100':player_stats[name]['per_poss'][0][4],\n",
+    "        'FGAp100':player_stats[name]['per_poss'][0][5],\n",
+    "        '3Pp100':player_stats[name]['per_poss'][0][6],\n",
+    "        '3PAp100':player_stats[name]['per_poss'][0][7],\n",
+    "        'FTp100':player_stats[name]['per_poss'][0][12],\n",
+    "        'FTAp100':player_stats[name]['per_poss'][0][13],\n",
+    "        'ORBp100':player_stats[name]['per_poss'][0][16],\n",
+    "        'DRBp100':player_stats[name]['per_poss'][0][17],\n",
+    "        'TRBp100':player_stats[name]['per_poss'][0][18],\n",
+    "        'ASTp100':player_stats[name]['per_poss'][0][19],\n",
+    "        'TOVp100':player_stats[name]['per_poss'][0][22],\n",
+    "        'STLp100':player_stats[name]['per_poss'][0][20],\n",
+    "        'Blkp100':player_stats[name]['per_poss'][0][21],\n",
+    "        'PFp100':player_stats[name]['per_poss'][0][23],\n",
+    "        'PTSp100':player_stats[name]['per_poss'][0][24],\n",
     "        'PER':player_stats[name]['advanced'][0][3],\n",
     "        'OWSp36':36*player_stats[name]['advanced'][0][16]/player_stats[name]['advanced'][0][2],\n",
     "        'DWSp36':36*player_stats[name]['advanced'][0][17]/player_stats[name]['advanced'][0][2]}\n",
+    "    d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']/100\n",
+    "    d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
+    "    d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
+    "    d['cTOV'] = d['TOVp100']/d['Load']\n",
+    "\n",
+    "    #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
+    "\n",
     "    player_vectors.append([d[stat] for stat in X.columns])\n",
     "    if name == 'Ben Simmons':\n",
     "        print(player_vectors[-1])\n",
     "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
    ]
   },
   {
@@ -430,7 +488,7 @@
     "        ht = [int(_) for _ in player_stats[name]['roster'][0][1].split('-')]\n",
     "        new_player['height'] = ht[0]*12 + ht[1]\n",
     "        new_player['born'] = {'year':int(player_stats[name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
-    "        if 'contracts' in player_stats[name]:\n",
+    "        if tyear>=2019 and 'contracts' in player_stats[name]:\n",
     "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2018+len(ctrct)}\n",
@@ -441,7 +499,8 @@
     "    \n",
     "    players.append(new_player)\n",
     "    if name in ['LeBron James', \"Trevon Duval\"]:\n",
-    "        pp.pprint(new_player)"
+    "        pp.pprint(new_player)\n",
+    "        pp.pprint(player_vectors[player_names.index(name)])"
    ]
   },
   {
@@ -480,7 +539,7 @@
    "outputs": [],
    "source": [
     "base['players'] = players\n",
-    "with open('auto_roster.json','wt') as fp:\n",
+    "with open('auto_roster_{}.json'.format(tyear),'wt') as fp:\n",
     "    json.dump(base,fp, indent=4, sort_keys=True)"
    ]
   },
@@ -644,7 +703,7 @@
     "        ht = [int(_) for _ in player_stats[name]['roster'][0][1].split('-')]\n",
     "        new_player['height'] = ht[0]*12 + ht[1]\n",
     "        new_player['born'] = {'year':int(player_stats[name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
-    "        if 'contracts' in player_stats[name]:\n",
+    "        if tyear >= 2019 and 'contracts' in player_stats[name]:\n",
     "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2018+len(ctrct)}\n",
@@ -700,7 +759,7 @@
     "        ht = [int(_) for _ in player_stats[name]['roster'][0][1].split('-')]\n",
     "        new_player['height'] = ht[0]*12 + ht[1]\n",
     "        new_player['born'] = {'year':int(player_stats[name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
-    "        if 'contracts' in player_stats[name]:\n",
+    "        if tyear >= 2019 and 'contracts' in player_stats[name]:\n",
     "            ctrct = [float(_) for _ in player_stats[name]['contracts'][0] if _ != '0.5']\n",
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':2018+len(ctrct)}\n",
