--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -57,10 +57,12 @@
     "X['Creation'] = X['ASTp100']*0.1843+(X['PTSp100']+X['TOVp100'])*0.0969-2.3021*X['3PtP']+0.0582*(X['ASTp100']*(X['PTSp100']+X['TOVp100'])*X['3PtP'] )-1.1942\n",
     "X['Load'] = (X['ASTp100']-(0.38*X['Creation'])*0.75)+X['FGAp100']+X['FTAp100']*0.44+X['Creation']+X['TOVp100']\n",
     "X['cTOV'] = X['TOVp100']/X['Load']\n",
+    "#X['DPM'] = X['Blkp100']*0.802+X['DRBp100']*0.42-4.7-0.07551*X['PFp100']+1.597019*X['STLp100']-0.26385*X['TOVp100']\n",
+    "#X['OPM'] = -8.57647+0.6111*X['PTSp100']-0.33918*(0.44*X['FTAp100']+X['FGAp100'])+0.440814*X['FTAp100']+0.379745*X['3PAp100']+0.634044*X['ASTp100']+0.77827*X['ORBp100']-1.08855*X['TOVp100']+0.26262*X['STLp100']\n",
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['cTOV','3PtP','Load','Creation','PER','MP','PassP']]]\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['OPM','DPM','cTOV','3PtP','Load','Creation','PER','MP']]]\n",
     "X.columns"
    ]
   },
@@ -70,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ =  plt.hist(X['cTOV'],150)"
+    "#_ =  plt.hist(X['OPM'],150)"
    ]
   },
   {
@@ -272,7 +274,7 @@
     "        'MP':player_stats[name]['per_game'][0][3],\n",
     "        'FT%':player_stats[name]['totals'][0][16]*100,\n",
     "        'AtRimFGP':player_stats[name]['shooting'][0][11]*100,\n",
-    "        'LowPostFGP':player_stats[name]['shooting'][0][12]*100,\n",
+    "        'LowPostFGP':player_stats[name]['shooting'][0][11]*100, #12\n",
     "        'MidRangeFGP':player_stats[name]['shooting'][0][13]*100,\n",
     "        'TS%':player_stats[name]['advanced'][0][4]*100,\n",
     "        '3PAr':player_stats[name]['advanced'][0][5]*100,\n",
@@ -317,12 +319,16 @@
     "        'PFp100':player_stats[name]['per_poss'][0][23],\n",
     "        'PTSp100':player_stats[name]['per_poss'][0][24],\n",
     "        'PER':player_stats[name]['advanced'][0][3],\n",
+    "        'DPM':player_stats[name]['advanced'][0][17],\n",
+    "        'OPM':player_stats[name]['advanced'][0][16],\n",
     "        'OWSp36':36*player_stats[name]['advanced'][0][16]/player_stats[name]['advanced'][0][2],\n",
     "        'DWSp36':36*player_stats[name]['advanced'][0][17]/player_stats[name]['advanced'][0][2]}\n",
     "    d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']/100\n",
     "    d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "    d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
     "    d['cTOV'] = d['TOVp100']/d['Load']\n",
+    "    #d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
+    "    #d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "\n",
     "    #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
     "\n",
@@ -500,7 +506,7 @@
     "    players.append(new_player)\n",
     "    if name in ['LeBron James', \"Trevon Duval\"]:\n",
     "        pp.pprint(new_player)\n",
-    "        pp.pprint(player_vectors[player_names.index(name)])"
+    "        #pp.pprint(player_vectors[player_names.index(name)])"
    ]
   },
   {
