add playoff data too

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -213,6 +213,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add playoff data to normal data\n",
+    "for player in player_stats:\n",
+    "    for table_in in player_stats[player]:\n",
+    "        tableN = table_in.split('_')\n",
+    "        tableS = '_'.join(tableN[1:])\n",
+    "        if 'playoffs'==tableN[0] and not table_in in ['playoffs_pbp']:\n",
+    "            #print(table_in)\n",
+    "            if tableS in player_stats[player]:\n",
+    "                player_stats[player][tableS] += player_stats[player][table_in]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for player in player_stats:\n",
     "    for tt in player_stats[player]:\n",
     "        new_rows = []\n",
@@ -244,6 +261,13 @@
     "\n",
     "        player_stats[player][tt] = a\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
