dont drop draft classes!

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -37,8 +37,8 @@
     "y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
     "X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
     "X['MP'] = df.MP\n",
-    "\n",
-    "df.columns,X.shape"
+    "X['Hgt'] = df['Hgt']\n",
+    "df.columns"
    ]
   },
   {
@@ -61,8 +61,8 @@
     "#X['OPM'] = -8.57647+0.6111*X['PTSp100']-0.33918*(0.44*X['FTAp100']+X['FGAp100'])+0.440814*X['FTAp100']+0.379745*X['3PAp100']+0.634044*X['ASTp100']+0.77827*X['ORBp100']-1.08855*X['TOVp100']+0.26262*X['STLp100']\n",
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
-    "\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['OPM','DPM','cTOV','3PtP','Load','Creation','PER','MP']]]\n",
+    "#'OPM','DPM','cTOV','Load'\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in ['Creation','PER','MP','Hgt']]]\n",
     "X.columns"
    ]
   },
@@ -83,7 +83,8 @@
    "source": [
     "from sklearn import neural_network\n",
     "from sklearn import linear_model\n",
-    "from sklearn import preprocessing\n"
+    "from sklearn import preprocessing\n",
+    "from sklearn import feature_selection\n"
    ]
   },
   {
@@ -92,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fexp = preprocessing.PolynomialFeatures(degree=2,interaction_only=False)\n",
+    "fexp = preprocessing.PolynomialFeatures(degree=2,interaction_only=True)\n",
     "scalerX = preprocessing.RobustScaler()\n",
     "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
@@ -123,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = sorted(ts)\n",
+    "ts = sorted(ts)[::1] # why not the biggest error\n",
     "print(ts[0][0])\n",
     "clf = ts[0][1]"
    ]
@@ -306,8 +307,14 @@
     "            continue\n",
     "        player_names.append(name)\n",
     "        player_years.append(ty)\n",
+    "        try:\n",
+    "            ht = [int(_) for _ in player_stats[ty][name]['roster'][0][1].split('-')]\n",
+    "            hgt = ht[0]*12 + ht[1]\n",
+    "        except:\n",
+    "            hgt=70\n",
     "        #for stat in X.columns:\n",
     "        d=    {'FG%':player_stats[ty][name]['totals'][0][6]*100,\n",
+    "            'Hgt':3.7*(hgt-66),\n",
     "            '3P%':player_stats[ty][name]['totals'][0][9]*100,\n",
     "            'MP':player_stats[ty][name]['per_game'][0][3],\n",
     "            'FT%':player_stats[ty][name]['totals'][0][16]*100,\n",
@@ -365,8 +372,8 @@
     "        d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "        d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
     "        d['cTOV'] = d['TOVp100']/d['Load']\n",
-    "        #d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
-    "        #d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
+    "        d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
+    "        d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "\n",
     "        #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
     "\n",
@@ -407,6 +414,9 @@
     "Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
     "predict = clf.predict(Xn_fs)\n",
     "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
+    "#ratings[:,0] = Xn[:,list(X.columns).index('Hgt')]\n",
+    "HGT_PRED = 0.75\n",
+    "ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
     "#ratings = scalery.inverse_transform(clf.predict(fexp.transform(scalerX.transform(Xn))))"
    ]
   },
@@ -492,7 +502,7 @@
     "#-5 is for prospects in the draft after that.\n",
     "players = []\n",
     "if tyear[0] == CURRENT_YEAR:\n",
-    "    players += [_ for _ in playersOG if _['tid']==-1]\n",
+    "    players += [_ for _ in playersOG if _['tid'] in [-1,-2,-4,-5]]\n",
     "elif tyear[0] == CURRENT_YEAR-1:\n",
     "    for player in playersOG:\n",
     "        if player['tid'] == -2:\n",
